<resources>
    <string name="app_name">FavoriteCountries</string>

    <string name="action_retry">Retry</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>

    <string name="country_search_menu_search_title">Search</string>
    <string name="country_search_toolbar_title">Countries</string>
    <string name="country_search_empty_message">Nothing found</string>
    <string name="country_search_error_message">Something went wrong</string>

    <string name="home_toolbar_title">Favorites</string>
    <string name="home_empty_message">Nothing found</string>
    <string name="home_add_contentdes">Add</string>
    <string name="home_on_delete_message">Delete from favorites?</string>

    <string name="country_details_notes_hint">My favorite things about %s</string>
    <string name="country_details_save_btn_text">Save</string>
</resources>